--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-<html>
-    <head>
-        <title>Good ReadMe Generator</title>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <title>Document</title>
+</head>
+<body>
+  <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Hi! My name is ChrisReadMe</h1>
+    <p class="lead">I am from undefined.</p>
+    <h3>Example heading <span class="badge badge-secondary">Contact Me</span></h3>
+    <ul class="list-group">
+      <li class="list-group-item">My GitHub username is </li>
+      <li class="list-group-item">LinkedIn: undefined</li>
+    </ul>
+  </div>
+</div>
+</body>
 </html>
